--- a/website/static/admin/indiv_sheet.css
+++ b/website/static/admin/indiv_sheet.css
@@ -34,12 +34,39 @@ details_font{
 com_font{
   color: white;
 }
+table{
+	border: solid;
+	
+	width: 100%;
+}
+
+.tb_title{
+	width: 9%;
+}
+
+.tb_desc{
+	width: 15%;
+}
+
+
 
 .but{
 border-radius: 15px;
 float: right;
 width: 100%;
+height: 50px;
 }
+
+.right_align{
+	text-align: right;
+}
+
+.back_but{
+	border-radius: 15px;
+	float: left;
+	width: 10%;
+}
+
 
 .green_bg{
 	background-color: green;
@@ -83,47 +110,48 @@ text-align: center;
 }
 
 .parent > div {
-  text-align: center;
   border-style: outset;
 }
 
-.div1 { grid-area: 1 / 1 / 2 / 21; 
+.div1 { grid-area: 2 / 1 / 2 / 21; 
 border-width: 0px 0px;
 }
-.div2 { grid-area: 2 / 1 / 3 / 21;
+.div2 { grid-area: 3 / 1 / 3 / 21;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	border-radius: 15px 15px 15px 15px;  
 	border-width: 0px;
 }
-.div3 { grid-area: 3 / 1 / 4 / 6;
+.div3 { grid-area: 4 / 1 / 4 / 6;
 border-radius: 15px 0px 0px 0px;}
-.div4 { grid-area: 3 / 6 / 4 / 21;
+.div4 { grid-area: 4 / 6 / 4 / 21;
 border-radius: 0px 15px 0px 0px;}
-.div5 { grid-area: 4 / 1 / 5 / 6;}
-.div6 { grid-area: 4 / 6 / 5 / 21;}
-.div7 { grid-area: 5 / 1 / 7 / 6;
+.div5 { grid-area: 5 / 1 / 5 / 6;}
+.div6 { grid-area: 5 / 6 / 5 / 21;}
+.div7 { grid-area: 6 / 1 / 8 / 6;
 border-radius: 0px 0px 0px 15px}
-.div8 { grid-area: 5 / 6 / 6 / 11;}
-.div9 { grid-area: 5 / 11 / 6 / 16;}
-.div10 { grid-area: 5 / 16 / 6 / 21;}
-.div11 { grid-area: 6 / 6 / 7 / 11;}
-.div12 { grid-area: 6 / 11 / 7 / 16;}
-.div13 { grid-area: 6 / 16 / 7 / 21; 
+.div8 { grid-area: 6 / 6 / 6 / 11;}
+.div9 { grid-area: 6 / 11 / 6 / 16;}
+.div10 { grid-area: 6 / 16 / 6 / 21;}
+.div11 { grid-area: 7 / 6 / 7 / 11;}
+.div12 { grid-area: 7 / 11 / 7 / 16;}
+.div13 { grid-area: 7 / 16 / 7 / 21; 
 	border-radius: 0px 0px 15px 0px;}
-.div14 { grid-area: 7 / 1 / 8 / 21; 
+.div14 { grid-area: 8 / 1 / 8 / 21; 
 	border-radius: 15px 15px 0px 0px; }
-.div15 { grid-area: 8 / 1 / 9 / 5; }
-.div16 { grid-area: 8 / 5 / 9 / 11; }
-.div17 { grid-area: 8 / 11 / 9 / 15; }
-.div18 { grid-area: 8 / 15 / 9 / 21; }
-.div19 { grid-area: 9 / 1 / 10 / 5; 
+.div15 { grid-area: 9 / 1 / 9 / 5; }
+.div16 { grid-area: 9 / 5 / 9 / 11; }
+.div17 { grid-area: 9 / 11 / 9 / 15; }
+.div18 { grid-area: 9 / 15 / 9 / 21; }
+.div19 { grid-area: 10 / 1 / 10 / 5; 
 	border-radius: 0px 0px 0px 15px;}
-.div20 { grid-area: 9 / 5 / 10 / 11; }
-.div21 { grid-area: 9 / 11 / 10 / 15; }
-.div22 { grid-area: 9 / 15 / 10 / 21; 
+.div20 { grid-area: 10 / 5 / 10 / 11; }
+.div21 { grid-area: 10 / 11 / 10 / 15; }
+.div22 { grid-area: 10 / 15 / 10 / 21; 
 	border-radius: 0px 0px 15px 0px; }
-.div23 { grid-area: 10 / 1 / 11 / 21;}
+.div23 { grid-area: 1 / 1 / 11 / 21;}
+.div23two { grid-area: 1 / 16 / 11 / 21;
+}
 .div24 { grid-area: 11 / 1 / 13 / 2;
 	border-radius: 15px 0px 0px 0px;
 }
@@ -133,97 +161,29 @@ border-radius: 0px 0px 0px 15px}
 .div28 { grid-area: 11 / 11 / 12 / 14;}
 .div29 { grid-area: 11 / 14 / 12 / 17; }
 .div30 { grid-area: 12 / 2 / 13 / 5;
-	border-radius: 15px 0px 0px 0px}
+	border-radius: 15px 0px 0px 0px;
+	}
 .div31 { grid-area: 12 / 5 / 13 / 8; }
 .div32 { grid-area: 12 / 8 / 13 / 11;}
 .div33 { grid-area: 12 / 11 / 13 / 14;}
 .div34 { grid-area: 12 / 14 / 13 / 17;
-border-radius: 0px 15px 0px 0px}
+	border-radius: 0px 15px 0px 0px}
 .div35 { grid-area: 11 / 17 / 13 / 21;
 	border-radius: 0px 15px 0px 0px; }
-.div36 { grid-area: 13 / 1 / auto / 2;}
-.div37 { grid-area: 13 / 2 / auto / 5;}
-.div38 { grid-area: 13 / 5 / auto / 8;}
-.div39 { grid-area: 13 / 8 / auto / 11;}
-.div40 { grid-area: 13 / 11 / auto / 14;}
-.div41 { grid-area: 13 / 14 / auto / 17;}
-.div42 { grid-area: 13 / 17 / 14 / 18;}
-.div43 { grid-area: 13 / 18 / 14 / 19;}
-.div44 { grid-area: 13 / 19 / 14 / 20;}
-.div45 { grid-area: 13 / 20 / 14 / 21;}
-.div46 { grid-area: 14 / 1 / 15 / 2;}
-.div47 { grid-area: 14 / 17 / 15 / 18;}
-.div48 { grid-area: 14 / 18 / 15 / 19;}
-.div49 { grid-area: 14 / 19 / 15 / 20;}
-.div50 { grid-area: 14 / 20 / 15 / 21;}
-.div51 { grid-area: 15 / 1 / auto / 2;}
-.div52 { grid-area: 15 / 2 / auto / 5;}
-.div53 { grid-area: 15 / 5 / auto / 8;}
-.div54 { grid-area: 15 / 8 / auto / 11;}
-.div55 { grid-area: 15 / 11 / auto / 14;}
-.div56 { grid-area: 15 / 14 / auto / 17;}
-.div57 { grid-area: 15 / 17 / 16 / 18;}
-.div58 { grid-area: 15 / 18 / 16 / 19;}
-.div59 { grid-area: 15 / 19 / 16 / 20;}
-.div60 { grid-area: 15 / 20 / 16 / 21;}
-.div61 { grid-area: 16 / 1 / 17 / 2;}
-.div62 { grid-area: 16 / 17 / 17 / 18;}
-.div63 { grid-area: 16 / 18 / 17 / 19;}
-.div64 { grid-area: 16 / 19 / 17 / 20;}
-.div65 { grid-area: 16 / 20 / 17 / 21;}
-.div66 { grid-area: 17 / 1 / auto / 2;}
-.div67 { grid-area: 17 / 2 / auto / 5;}
-.div68 { grid-area: 17 / 5 / auto / 8;}
-.div69 { grid-area: 17 / 8 / auto / 11;}
-.div70 { grid-area: 17 / 11 / auto / 14;}
-.div71 { grid-area: 17 / 14 / auto / 17;}
-.div72 { grid-area: 17 / 17 / auto / 18;}
-.div73 { grid-area: 17 / 18 / auto / 19;}
-.div74 { grid-area: 17 / 19 / auto / 20;}
-.div75 { grid-area: 17 / 20 / auto / 21;}
-.div76 { grid-area: 18 / 1 / auto / 2;}
-.div77 { grid-area: 18 / 17 / auto / 18;}
-.div78 { grid-area: 18 / 18 / auto / 19;}
-.div79 { grid-area: 18 / 19 / auto / 20;}
-.div80 { grid-area: 18 / 20 / auto / 21;}
-.div81 { grid-area: 19 / 1 / auto / 2;}
-.div82 { grid-area: 19 / 2 / auto / 5;}
-.div83 { grid-area: 19 / 5 / auto / 8;}
-.div84 { grid-area: 19 / 8 / auto / 11;}
-.div85 { grid-area: 19 / 11 / auto / 14;}
-.div86 { grid-area: 19 / 14 / auto / 17;}
-.div87 { grid-area: 19 / 17 / auto / 18;}
-.div88 { grid-area: 19 / 18 / auto / 19;}
-.div89 { grid-area: 19 / 19 / auto / 20;}
-.div90 { grid-area: 19 / 20 / auto / 21;}
-.div91 { grid-area: 20 / 1 / auto / 2;}
-.div92 { grid-area: 20 / 17 / auto / 18;}
-.div93 { grid-area: 20 / 18 / auto / 19;}
-.div94 { grid-area: 20 / 19 / auto / 20;}
-.div95 { grid-area: 20 / 20 / auto / 21;}
-.div96 { grid-area: 21 / 1 / auto / 2;
-	border-radius: 0px 0px 0px 15px;}
-.div97 { grid-area: 21 / 2 / auto / 5;}
-.div98 { grid-area: 21 / 5 / auto / 8;}
-.div99 { grid-area: 21 / 8 / auto / 11;}
-.div100 { grid-area: 21 / 11 / auto / 14;}
-.div101 { grid-area: 21 / 14 / auto / 17;}
-.div102 { grid-area: 21 / 17 / auto / 18;}
-.div103 { grid-area: 21 / 18 / auto / 19;}
-.div104 { grid-area: 21 / 19 / auto / 20;}
-.div105 { grid-area: 21 / 20 / auto / 21;}
-.div106 { grid-area: 22 / 1 / auto / 2; }
+.div36 { grid-area: 13 / 1 / auto / 21;
+}
+
 .div107 { grid-area: 22 / 17 / auto / 18;}
 .div108 { grid-area: 22 / 18 / auto / 19;}
 .div109 { grid-area: 22 / 19 / auto / 20;}
 .div110 { grid-area: 22 / 20 / auto / 21;}
-.div111 { grid-area: 23 / 14 / 24 / 17;
+.div111 { grid-area: 23 / 14 / auto / 17;
 	border-radius: 0px 0px 0px 15px;
 }
-.div112 { grid-area: 23 / 17 / 24 / 18;}
-.div113 { grid-area: 23 / 18 / 24 / 19;}
-.div114 { grid-area: 23 / 19 / 24 / 20;}
-.div115 { grid-area: 23 / 20 / 24 / 21;
+.div112 { grid-area: 23 / 17 / auto / 18;}
+.div113 { grid-area: 23 / 18 / auto / 19;}
+.div114 { grid-area: 23 / 19 / auto / 20;}
+.div115 { grid-area: 23 / 20 / auto / 21;
 	border-radius: 0px 0px 15px 0px;}
-.div116 { grid-area: 24 / 14 / 25 / 21; 
+.div116 { grid-area: 24 / 14 / auto / 21; 
 border-radius: 15px 15px 15px 15px; }
