--- a/website/templates/admin/gradesheet/view_sheet.html
+++ b/website/templates/admin/gradesheet/view_sheet.html
@@ -9,6 +9,14 @@
 		{% set x = 0 %}
 		<form method='POST'>
 			<div class="parent">
+				<div class="div23 empty_spc"> 
+					<form method='POST'>
+						<button type="submit" class="back_but" id="button_inp" name="button_inp">BACK</button>
+					</form>
+				</div>
+				<div class="div23two empty_spc right_align"> 
+					Template ID: blank
+				</div>
 				<div class="div1"> 
 					<p style="text-align: left; padding-left: 10px;">{{ current_id }}</p>
 					<h1>FEU ALABANG</h1>
@@ -78,9 +86,6 @@
 				<div class="div22"> 
 					P R O P O N E N T D E T A I L S
 				</div>
-				<div class="div23 empty_spc"> 
-					<prop_font1> EASTER EGG TIME </prop_font1>
-				</div>
 				<div class="div24 green_bg empty_spc"> 
 					<com_font>CRITERIA <br> AND <br> WEIGHT</com_font>
 				</div>
@@ -100,358 +105,86 @@
 					1
 				</div>
 				<div class="div30 green_bg"> 
-					VERY ACCEPTABLE
+					VERY <br> ACCEPTABLE 
 				</div>
 				<div class="div31 green_bg"> 
 					ACCEPTABLE
 				</div>
 				<div class="div32 green_bg">
-					FAIR
+					FAIR 
 				</div>
 				<div class="div33 green_bg">
 					NEEDS <br> IMPROVEMENT
 				</div>
 				<div class="div34 green_bg"> 
-					POOR
+					POOR 
 				</div>
 				<div class="div35 yellow_bg empty_spc"> 
 					STUDENT'S <br> INDIVIDUAL <br> GRADE
 				</div>
-				<div class="div36 green_bg"> 
-					{{ rubrics[x].desc }}
-					<br>
-					(x{{ rubrics[x].weight }})
-				</div>
-				<div class="div37">
-					{{ rubrics[x].rate5 }}
-				</div>
-				<div class="div38">
-					{{ rubrics[x].rate4 }}
-				</div>
-				<div class="div39"> 
-					{{ rubrics[x].rate3 }}
-				</div>
-				<div class="div40"> 
-					{{ rubrics[x].rate2 }}
-				</div>
-				<div class="div41"> 
-					{{ rubrics[x].rate1 }}
-					{% set x = x + 1 %}
-				</div>
-				<div class="div42 yellow_bg"> 
-					1 <br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div43 yellow_bg"> 
-					2 <br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div44 yellow_bg"> 
-					3 <br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div45 yellow_bg"> 
-					4 <br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div46 empty_spc"></div>
-				<div class="div47 empty_spc"></div>
-				<div class="div48 empty_spc"></div>
-				<div class="div49 empty_spc"></div>
-				<div class="div50 empty_spc"></div>
-				<div class="div51 green_bg"> 
-					{{ rubrics[x].desc }}
-					<br>
-					(x{{ rubrics[x].weight }})
-				</div>
-				<div class="div52"> 
-					{{ rubrics[x].rate5 }}
-				</div>
-				<div class="div53"> 
-					{{ rubrics[x].rate4 }}
-				</div>
-				<div class="div54"> 
-					{{ rubrics[x].rate3 }}
-				</div>
-				<div class="div55"> 
-					{{ rubrics[x].rate2 }}
-				</div>
-				<div class="div56">
-					{{ rubrics[x].rate1 }}
-					{% set x = x + 1 %}
-				</div>
-				<div class="div57 yellow_bg"> 
-					1 <br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div58 yellow_bg"> 
-					2 <br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div59 yellow_bg"> 
-					3 <br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div60 yellow_bg"> 
-					4 <br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div61 empty_spc"> 
-				</div>
-				<div class="div62 empty_spc"> 		
-				</div> 
-				<div class="div63 empty_spc"> 		
-				</div>
-				<div class="div64 empty_spc"> 		
-				</div>
-				<div class="div65 empty_spc"> 
-				</div>
-				<div class="div66 green_bg">
-					{{ rubrics[x].desc }}
-					(x{{ rubrics[x].weight }})
-				</div>
-				<div class="div67"> 
-					{{ rubrics[x].rate5 }}
-				</div>
-				<div class="div68"> 
-					{{ rubrics[x].rate4 }}
-				</div>
-				<div class="div69"> 
-					{{ rubrics[x].rate3 }}
-				</div>
-				<div class="div70"> 
-					{{ rubrics[x].rate2 }}
-				</div>
-				<div class="div71"> 
-					{{ rubrics[x].rate1 }}
-					{% set x = x + 1 %}
-				</div>
-				<div class="div72 yellow_bg"> 
-					1<br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div73 yellow_bg"> 
-					2<br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div74 yellow_bg"> 
-					3<br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div75 yellow_bg"> 
-					4<br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div76 empty_spc"> 
-				</div>
-				<div class="div77 empty_spc"> 
-				</div>
-				<div class="div78 empty_spc"> 
-				</div>
-				<div class="div79 empty_spc"> 
-				</div>
-				<div class="div80 empty_spc"> 
-				</div>
-				<div class="div81 green_bg">
-					{{ rubrics[x].desc }}
-					(x{{ rubrics[x].weight }})
-				</div>
-				<div class="div82">
-					{{ rubrics[x].rate5 }}
-				</div>
-				<div class="div83"> 
-					{{ rubrics[x].rate4 }}
-				</div>
-				<div class="div84"> 
-					{{ rubrics[x].rate3 }}
-				</div>
-				<div class="div85"> 
-					{{ rubrics[x].rate2 }}
-				</div>
-				<div class="div86"> 
-					{{ rubrics[x].rate1 }}
-					{% set x = x + 1 %}
-				</div>
-				<div class="div87 yellow_bg"> 
-					1<br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div88 yellow_bg"> 
-					2<br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div89 yellow_bg"> 
-					3<br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div90 yellow_bg"> 
-					4<br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div91 empty_spc"> 
-				</div>
-				<div class="div92 empty_spc"> 		
-				</div>
-				<div class="div93 empty_spc"> 			
-				</div>
-				<div class="div94 empty_spc"> 		
-				</div>
-				<div class="div95 empty_spc"> 		
-				</div>
-				<div class="div96 green_bg"> 
-					{{ rubrics[x].desc }}
-					(x{{ rubrics[x].weight }})
-				</div>
-				<div class="div97"> 
-					{{ rubrics[x].rate5 }}
-				</div>
-				<div class="div98"> 
-					{{ rubrics[x].rate4 }}
-				</div>
-				<div class="div99"> 
-					{{ rubrics[x].rate3 }}
-				</div>
-				<div class="div100"> 
-					{{ rubrics[x].rate2 }}
-				</div>
-				<div class="div101"> 
-					{{ rubrics[x].rate1 }}
-				</div>
-				<div class="div102 yellow_bg"> 
-					1<br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select> 
-				</div>
-				<div class="div103 yellow_bg"> 
-					2<br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div104 yellow_bg"> 
-					3<br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
-				</div>
-				<div class="div105 yellow_bg"> 
-					4<br> <br>
-					<select name="score" id="score">
-						<option value="five">5</option>
-						<option value="four">4</option>
-						<option value="three">3</option>
-						<option value="two">2</option>
-						<option value="One">1</option>
-					</select>
+				<div class = "div36">
+					<table>
+						<td class = "tb_title">
+							{{ rubrics[x].desc }}
+							<br>
+							(x{{ rubrics[x].weight }})
+						</td>
+						<td class = "tb_desc">
+							{{ rubrics[x].rate5 }}
+						</td>
+						<td class = "tb_desc">
+							{{ rubrics[x].rate4 }}
+						</td>
+						<td class = "tb_desc">
+							{{ rubrics[x].rate3 }}
+						</td>
+						<td class = "tb_desc">
+							{{ rubrics[x].rate2 }}
+						</td>
+						<td class = "tb_desc">
+							{{ rubrics[x].rate1 }}
+						</td>
+						<td>
+							1 <br> <br>
+							<select name="score" id="score">
+								<option value="five">5</option>
+								<option value="four">4</option>
+								<option value="three">3</option>
+								<option value="two">2</option>
+								<option value="One">1</option>
+							</select>
+						</td>
+						<td>
+							2 <br> <br>
+							<select name="score" id="score">
+								<option value="five">5</option>
+								<option value="four">4</option>
+								<option value="three">3</option>
+								<option value="two">2</option>
+								<option value="One">1</option>
+							</select>
+						</td>
+						<td>
+							3 <br> <br>
+							<select name="score" id="score">
+								<option value="five">5</option>
+								<option value="four">4</option>
+								<option value="three">3</option>
+								<option value="two">2</option>
+								<option value="One">1</option>
+							</select>
+						</td>
+						<td>
+							4 <br> <br>
+							<select name="score" id="score">
+								<option value="five">5</option>
+								<option value="four">4</option>
+								<option value="three">3</option>
+								<option value="two">2</option>
+								<option value="One">1</option>
+							</select>
+						</td>
+					</table>
 				</div>
 				<div class="div106 empty_spc"> 			
 				</div>
@@ -481,8 +214,7 @@
 				<div class="div116 drkr_grn"> 
 					<form method='POST'>
 						<button type="submit" class="but" id="button_inp" name="button_inp">SUBMIT</button>
-					</form>
-					
+					</form>		
 				</div>
 			</div>
 		</form>
