--- a/website/static/admin/indiv_sheet.css
+++ b/website/static/admin/indiv_sheet.css
@@ -35,9 +35,17 @@ com_font{
   color: white;
 }
 table{
-	border: solid;
-	
 	width: 100%;
+	border-radius: 15px 15px 0px 15px; 
+	
+}
+
+table, th, td{
+	
+}
+
+th{
+	background: green;
 }
 
 .tb_title{
@@ -51,10 +59,10 @@ table{
 
 
 .but{
-border-radius: 15px;
-float: right;
-width: 100%;
-height: 50px;
+	border-radius: 15px;
+	float: right;
+	width: 100%;
+	height: 50px;
 }
 
 .right_align{
@@ -84,9 +92,20 @@ height: 50px;
 	border-width: 0px 0px; 
 }
 
-.drkr_grn{
-	border-color: yellow;
-	border-style: solid;
+.one_rad_sd{
+	border-radius: 15px 0px 0px 0px;
+}
+
+.two_rad_sd{
+	border-radius: 0px 15px 0px 0px;
+}
+
+.three_rad_sd{
+	border-radius: 0px 0px 15px 0px;
+}
+
+.four_rad_sd{
+	border-radius: 0px 0px 0px 15px;
 }
 
 .parent {
@@ -152,25 +171,10 @@ border-radius: 0px 0px 0px 15px}
 .div23 { grid-area: 1 / 1 / 11 / 21;}
 .div23two { grid-area: 1 / 16 / 11 / 21;
 }
-.div24 { grid-area: 11 / 1 / 13 / 2;
-	border-radius: 15px 0px 0px 0px;
-}
-.div25 { grid-area: 11 / 2 / 12 / 5;}
-.div26 { grid-area: 11 / 5 / 12 / 8;}
-.div27 { grid-area: 11 / 8 / 12 / 11;}
-.div28 { grid-area: 11 / 11 / 12 / 14;}
-.div29 { grid-area: 11 / 14 / 12 / 17; }
-.div30 { grid-area: 12 / 2 / 13 / 5;
-	border-radius: 15px 0px 0px 0px;
-	}
-.div31 { grid-area: 12 / 5 / 13 / 8; }
-.div32 { grid-area: 12 / 8 / 13 / 11;}
-.div33 { grid-area: 12 / 11 / 13 / 14;}
-.div34 { grid-area: 12 / 14 / 13 / 17;
-	border-radius: 0px 15px 0px 0px}
-.div35 { grid-area: 11 / 17 / 13 / 21;
-	border-radius: 0px 15px 0px 0px; }
+
 .div36 { grid-area: 13 / 1 / auto / 21;
+	border-radius: 15px 15px 0px 15px; 
+	border-width: 0px 0px;
 }
 
 .div107 { grid-area: 22 / 17 / auto / 18;}
