--- a/website/templates/admin/gradesheet/view_sheet.html
+++ b/website/templates/admin/gradesheet/view_sheet.html
@@ -86,44 +86,46 @@
 				<div class="div22"> 
 					P R O P O N E N T D E T A I L S
 				</div>
-				<div class="div24 green_bg empty_spc"> 
-					<com_font>CRITERIA <br> AND <br> WEIGHT</com_font>
-				</div>
-				<div class="div25 green_bg empty_spc"> 
-					5
-				</div>
-				<div class="div26 green_bg empty_spc"> 
-					4
-				</div>
-				<div class="div27 green_bg empty_spc"> 
-					3
-				</div>
-				<div class="div28 green_bg empty_spc"> 
-					2
-				</div>
-				<div class="div29 green_bg empty_spc"> 
-					1
-				</div>
-				<div class="div30 green_bg"> 
-					VERY <br> ACCEPTABLE 
-				</div>
-				<div class="div31 green_bg"> 
-					ACCEPTABLE
-				</div>
-				<div class="div32 green_bg">
-					FAIR 
-				</div>
-				<div class="div33 green_bg">
-					NEEDS <br> IMPROVEMENT
-				</div>
-				<div class="div34 green_bg"> 
-					POOR 
-				</div>
-				<div class="div35 yellow_bg empty_spc"> 
-					STUDENT'S <br> INDIVIDUAL <br> GRADE
-				</div>
 				<div class = "div36">
 					<table>
+						<th rowspan="2" class = "one_rad_sd">
+							CRITERIA AND WEIGHT
+						</th>
+						<th>
+							5
+						</th>
+						<th>
+							4
+						</th>
+						<th>
+							3
+						</th>
+						<th>
+							2
+						</th>
+						<th>
+							1
+						</th>
+						<th colspan="4" rowspan="2" class="yellow_bg two_rad_sd">
+							STUDENT <br> INDIVIDUAL <br> GRADE
+						</th>
+						<tr>
+						<th>
+							VERY ACCEPTABLE
+						</th>
+						<th>
+							ACCEPTABLE
+						</th>
+						<th>
+							FAIR
+						</th>
+						<th>
+							NEEDS IMPROVEMENT
+						</th>
+						<th>
+							POOR
+						</th>
+						<tr>
 						<td class = "tb_title">
 							{{ rubrics[x].desc }}
 							<br>
@@ -184,6 +186,41 @@
 								<option value="One">1</option>
 							</select>
 						</td>
+						<tr>
+
+					</table>
+					<table>
+						<td class = "tb_title">
+							&nbsp;
+						</td>
+						<td class = "tb_desc">
+							&nbsp;
+						</td>
+						<td class = "tb_desc">
+							&nbsp;
+						</td>
+						<td class = "tb_desc">
+							&nbsp;
+						</td>
+						<td class = "tb_desc">
+							&nbsp;
+						</td>
+						<td class="tb_desc four_rad_sd green_bg empty_spc">
+							TOTAL
+						</td>
+						<td class="yellow_bg empty_spc">
+						0
+						</td>
+						0
+						<td class="yellow_bg empty_spc">
+						0
+						</td>
+						<td class="yellow_bg empty_spc">
+						0
+						</td>
+						<td class="three_rad_sd yellow_bg empty_spc">
+						0
+						</td>
 					</table>
 				</div>
 				<div class="div106 empty_spc"> 			
@@ -195,21 +232,6 @@
 				<div class="div109 empty_spc"> 
 				</div>
 				<div class="div110 empty_spc"> 
-				</div>
-				<div class="div111 green_bg empty_spc"> 
-					TOTAL:
-				</div>
-				<div class="div112 yellow_bg empty_spc"> 
-					0
-				</div>
-				<div class="div113 yellow_bg empty_spc"> 
-					0
-				</div>
-				<div class="div114 yellow_bg empty_spc"> 
-					0
-				</div>
-				<div class="div115 yellow_bg empty_spc"> 
-					0
 				</div>
 				<div class="div116 drkr_grn"> 
 					<form method='POST'>
